# one-rom

./: CHANGELOG.md  Makefile
.github/workflows/: ci.yml
ci/: blacklist-config.txt  test-pios.sh  tests.txt
docs/: CHIP-TYPES.md
hardware/pcb/verified/fire-24-d/fab/: fire-24-d-bom-rp2354.csv  fire-24-d-bom.csv
hardware/pcb/verified/fire-24-e/fab/: fire-24-e-bom-alt-ap2112k.csv  fire-24-e-bom.csv
hardware/pcb/verified/fire-28-a4/fab/: fire-28-a3-bom-rp2354.csv  fire-28-a3-bom.csv
hardware/pcb/verified/fire-32-a/fab/: fire-32-a-bom.csv
hardware/pcb/verified/fire-40-a/: README.md
hardware/pcb/verified/fire-40-a/fab/: fire-40-a-bom-rp2354-and-flash.csv  fire-40-a-bom-rp2354-no-ext-flash.csv
images/test/: checksum.sh  rand_4096.rom
onerom-config/: schema.json  set-c64.json
plugins/system/usb/: Makefile
plugins/system/usb/include/: usb_plugin.h
plugins/system/usb/src/: usb_main.c
plugins/user/host-control/: Makefile  README.md  host_control_plugin.ld  plugin-meta.json
plugins/user/host-control/src/: flash_erase.c  flash_erase.h  host_control_main.c
releases/: manifest-v0.6.10.json  manifest-v0.6.11.json  manifest-v0.6.12.json  manifest-v0.6.9.json  releases.json
rust/cli/: CHANGELOG.md  Cargo.toml  README.md
rust/cli/scripts/: 69-onerom-cli.rules
rust/cli/src/: image.rs  main.rs  program.rs
rust/cli/src/args/: image.rs  mod.rs  program.rs
rust/cli/src/lib/: error.rs  slot.rs
rust/config/: Cargo.toml
rust/config/json/: chip-types.json  fire-28-a.json
rust/fw/: Cargo.toml
rust/lab-new/src/: hw.rs
rust/schema-gen/: Cargo.toml
rust/sdrr-fw-parser/: Cargo.toml
rust/sdrr-fw-parser/src/: info.rs  types.rs
rust/sdrr-gen/: Cargo.toml
rust/sdrr-gen/src/: args.rs  config.rs  generator.rs
rust/sdrr-info/: Cargo.toml
rust/studio/: CHANGELOG.md  Cargo.toml
sdrr/: Makefile  lens.mk  test.mk
sdrr/include/: config_base.h  constants.h  enums.h  functions.h  include.h  reg-rp235x.h  reg-stm32f4.h
sdrr/lens/: README.md
sdrr/link/: flash_rodata.ld
sdrr/ora/: api.h  plugin.h
sdrr/ora/examples/c64-char-led/: plugin_main.c
sdrr/ora/examples/c64-kernal-mod/: plugin_main.c
sdrr/src/: constants.c  main.c  plugin.c  rp235x.c  utils.c  vector.c
sdrr/src/piodma/: piorom.c
sdrr/test/: test_gpio.c  test_main.c
test/src/: check-roms.c  query-roms.c
