[package]
name = "onerom-cli"
version = "0.1.6"
edition = "2024"
authors = ["Piers Finlayson <piers@piers.rocks>"]
license = "MIT"
description = "Command line interface to manage One ROM - the most flexible retro ROM replacement"
repository = "https://github.com/piersfinlayson/one-rom"
homepage = "https://onerom.org"
documentation = "https://docs.rs/onerom-cli"
keywords = ["retro", "rom", "commodore", "embedded"]
categories = ["embedded", "hardware-support"]

[lib]
name = "onerom_cli"
path = "src/lib/mod.rs"

[[bin]]
name = "onerom"
path = "src/main.rs"

[dependencies]
onerom-config = { path="../config", version = "0.4.10" }
onerom-fw = { path="../fw", version = "0.1.21" }
onerom-gen = { path="../gen", version = "0.5.9" }
sdrr-fw-parser = { path="../sdrr-fw-parser", version = "0.6.12" }

picoboot = { version = "0.2.3", features = ["reader", "tokio"] }

base64 = { version = "0.22" }
bytes = "1.10"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
enum_dispatch = "0.3"
env_logger = "0.11"
hex = { version = "0.4" }
log = "0.4"
nusb = { version = "0.2", features = ["tokio"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "charset", "blocking", "rustls-tls"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
thiserror = "2.0"
wildmatch = "2.6"
zip = "8.2"

[build-dependencies]
built = { version = "0.8", features = ["git2"] }
embed-resource = "3"
git2 = { version = "0.20", default-features = false }
static_vcruntime = "3.0"

[dev-dependencies]
tempfile = "3"

# Cargo deb metadata for building Linux deb packages
[package.metadata.deb]
name = "onerom-cli"
maintainer = "Piers Finlayson <piers@piers.rocks>"
copyright = "Piers Finlayson"
license-file = ["LICENSE.txt", "0"]
extended-description = "Command line interface to manage One ROM - the most flexible retro ROM replacement"
depends = "$auto"
section = "utils"
priority = "optional"
maintainer-scripts = "scripts/linux/maintainer"
profile = "release"
assets = [
    ["target/release/onerom", "usr/bin/", "755"],
    ["scripts/69-onerom-cli.rules", "lib/udev/rules.d/69-onerom-cli.rules", "644"],
]